--- a/package.json
+++ b/package.json
@@ -39,12 +39,17 @@
 		"winston-daily-rotate-file": "^5.0.0"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
+		"@types/dotenv": "^6.1.1",
 		"@types/express": "^5.0.0",
+		"@types/http-status-codes": "^1.2.0",
 		"@types/jest": "^29.5.14",
+		"@types/jsonwebtoken": "^9.0.7",
 		"@types/mongoose": "^5.11.96",
 		"@types/node": "^22.9.0",
 		"@types/passport": "^1.0.17",
 		"@types/passport-jwt": "^4.0.1",
+		"@types/winston": "^2.4.4",
 		"@typescript-eslint/eslint-plugin": "^8.13.0",
 		"@typescript-eslint/parser": "^8.13.0",
 		"eslint": "^9.14.0",
