Fix test typescript errors

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/server.ts",
-		"build": "tsc --build && npm install --legacy-peers-deps",
+		"build": "tsc --build && npm install",
 		"start": "node dist/server.js",
-		"test": "jest --detectOpenHandles",
+		"test": "cross-env NODE_ENV=test PORT=5002 jest --detectOpenHandles",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"format": "prettier --write .",
@@ -45,6 +45,7 @@
 		"@types/http-status-codes": "^1.2.0",
 		"@types/jest": "^29.5.14",
 		"@types/jsonwebtoken": "^9.0.7",
+		"@types/mocha": "^10.0.9",
 		"@types/mongoose": "^5.11.96",
 		"@types/node": "^22.9.0",
 		"@types/passport": "^1.0.17",
@@ -52,6 +53,7 @@
 		"@types/winston": "^2.4.4",
 		"@typescript-eslint/eslint-plugin": "^8.13.0",
 		"@typescript-eslint/parser": "^8.13.0",
+		"cross-env": "^7.0.3",
 		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-typescript": "^3.6.3",
