--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,10 @@
 			"@routes/*": ["src/routes/*"],
 			"@services/*": ["src/services/*"],
 			"@utils/*": ["src/utils/*"],
-			"@types/*": ["src/types/*"]
+			"@types/*": ["src/types/*"],
+			"@server": ["src/server.ts"]
 		},
-		"rootDir": "src",
+		"rootDir": "./",
 		"outDir": "dist",
 		"module": "CommonJS",
 		"target": "ES2020",
@@ -20,6 +21,6 @@
 		"forceConsistentCasingInFileNames": true,
 		"skipLibCheck": true
 	},
-	"include": ["src/**/*.ts"],
+	"include": ["src/**/*.ts", "tests/**/*.ts"],
 	"exclude": ["node_modules", "dist"]
 }
