--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ name: Lint
 
 on:
     pull_request:
-        branches: [main]
+        branches: [dev]
 
 jobs:
     lint:
@@ -13,9 +13,10 @@ jobs:
               uses: actions/checkout@v2
 
             - name: Set up Node.js
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
-                  node-version: '16'
+                  node-version: '18'
+                  cache: 'npm'
 
             - name: Install dependencies
               run: npm install
